Added some tensor contraction

--- a/notebooks/0 - ITensor101.ipynb
+++ b/notebooks/0 - ITensor101.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ITensor ord=3 (dim=3|id=368|\"index_i\") (dim=2|id=571|\"index_j\") (dim=4|id=752|\"index_k\")\n",
+       "ITensor ord=3 (dim=3|id=659|\"index_i\") (dim=2|id=47|\"index_j\") (dim=4|id=893|\"index_k\")\n",
        "NDTensors.EmptyStorage{NDTensors.EmptyNumber,NDTensors.Dense{NDTensors.EmptyNumber,Array{NDTensors.EmptyNumber,1}}}"
       ]
      },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(dim=3|id=368|\"index_i\"), (dim=2|id=571|\"index_j\"), (dim=4|id=752|\"index_k\"))\n"
+      "(dim=3|id=659|\"index_i\"), (dim=2|id=47|\"index_j\"), (dim=4|id=893|\"index_k\"))\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +127,9 @@
      "output_type": "stream",
      "text": [
       "T = ITensor ord=3\n",
-      "Dim 1: (dim=3|id=368|\"index_i\")\n",
-      "Dim 2: (dim=2|id=571|\"index_j\")\n",
-      "Dim 3: (dim=4|id=752|\"index_k\")\n",
+      "Dim 1: (dim=3|id=659|\"index_i\")\n",
+      "Dim 2: (dim=2|id=47|\"index_j\")\n",
+      "Dim 3: (dim=4|id=893|\"index_k\")\n",
       "NDTensors.Dense{Complex{Int64},Array{Complex{Int64},1}}\n",
       " 3×2×4\n",
       "[:, :, 1] =\n",
@@ -156,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "ITensor ord=3 (dim=3|id=368|\"index_i\") (dim=2|id=571|\"index_j\") (dim=4|id=752|\"index_k\")\n",
+       "ITensor ord=3 (dim=3|id=659|\"index_i\") (dim=2|id=47|\"index_j\") (dim=4|id=893|\"index_k\")\n",
        "NDTensors.Dense{Complex{Int64},Array{Complex{Int64},1}}"
       ]
      },
@@ -177,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ITensor ord=2 (dim=2|id=151|\"i\") (dim=2|id=200|\"j\")\n",
+       "ITensor ord=2 (dim=2|id=539|\"i\") (dim=2|id=796|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +211,8 @@
      "output_type": "stream",
      "text": [
       "A = ITensor ord=2\n",
-      "Dim 1: (dim=2|id=151|\"i\")\n",
-      "Dim 2: (dim=2|id=200|\"j\")\n",
+      "Dim 1: (dim=2|id=539|\"i\")\n",
+      "Dim 2: (dim=2|id=796|\"j\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 2×2\n",
       "  1.0  -2.0\n",
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "ITensor ord=2 (dim=2|id=151|\"i\") (dim=2|id=200|\"j\")\n",
+       "ITensor ord=2 (dim=2|id=539|\"i\") (dim=2|id=796|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +251,8 @@
      "output_type": "stream",
      "text": [
       "A .*= 2.0 = ITensor ord=2\n",
-      "Dim 1: (dim=2|id=151|\"i\")\n",
-      "Dim 2: (dim=2|id=200|\"j\")\n",
+      "Dim 1: (dim=2|id=539|\"i\")\n",
+      "Dim 2: (dim=2|id=796|\"j\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 2×2\n",
       "  2.0  -4.0\n",
@@ -262,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "ITensor ord=2 (dim=2|id=151|\"i\") (dim=2|id=200|\"j\")\n",
+       "ITensor ord=2 (dim=2|id=539|\"i\") (dim=2|id=796|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -276,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ITensor ord=2 (dim=2|id=151|\"i\") (dim=2|id=200|\"j\")\n",
+       "ITensor ord=2 (dim=2|id=539|\"i\") (dim=2|id=796|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,8 +304,8 @@
      "output_type": "stream",
      "text": [
       "A = ITensor ord=2\n",
-      "Dim 1: (dim=2|id=151|\"i\")\n",
-      "Dim 2: (dim=2|id=200|\"j\")\n",
+      "Dim 1: (dim=2|id=539|\"i\")\n",
+      "Dim 2: (dim=2|id=796|\"j\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 2×2\n",
       " 2.0  4.0\n",
@@ -315,7 +315,7 @@
     {
      "data": {
       "text/plain": [
-       "ITensor ord=2 (dim=2|id=151|\"i\") (dim=2|id=200|\"j\")\n",
+       "ITensor ord=2 (dim=2|id=539|\"i\") (dim=2|id=796|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -336,13 +336,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ITensor ord=3 (dim=4|id=185|\"k\") (dim=3|id=802|\"i\") (dim=2|id=914|\"j\")\n",
+       "ITensor ord=3 (dim=4|id=801|\"k\") (dim=3|id=729|\"i\") (dim=2|id=339|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -370,36 +370,36 @@
      "output_type": "stream",
      "text": [
       "A + B = ITensor ord=3\n",
-      "Dim 1: (dim=3|id=802|\"i\")\n",
-      "Dim 2: (dim=2|id=914|\"j\")\n",
-      "Dim 3: (dim=4|id=185|\"k\")\n",
+      "Dim 1: (dim=3|id=729|\"i\")\n",
+      "Dim 2: (dim=2|id=339|\"j\")\n",
+      "Dim 3: (dim=4|id=801|\"k\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 3×2×4\n",
       "[:, :, 1] =\n",
-      "  0.8467124434696456     1.0079771459836067\n",
-      " -0.5346055532767313    -0.9816008320681964\n",
-      "  0.003422219977912644   1.71930777678977\n",
+      " -2.04418442837519     1.4801737870124798\n",
+      "  0.9399514335963322   0.1628231613071467\n",
+      "  0.9522258959802101  -0.9153345635271172\n",
       "\n",
       "[:, :, 2] =\n",
-      " 1.293334580359939   -1.193547402230047\n",
-      " 0.6825823327317375  -0.20329922750836382\n",
-      " 0.4920322362159911  -0.38619147999842507\n",
+      " 0.33386257580631795  -0.6893744834642066\n",
+      " 0.08002073208731836  -1.1714244383713939\n",
+      " 0.683760514442626     0.6565625731408096\n",
       "\n",
       "[:, :, 3] =\n",
-      " -2.3760503685398326  -2.681611136723132\n",
-      " -0.5120997578802433  -1.7061765031001264\n",
-      "  0.1675546907405645  -3.937846778837278\n",
+      " -1.296596906933475    -1.0183740805824528\n",
+      " -0.10601668201004166  -3.4167648958819536\n",
+      "  1.0880623060555803   -0.17593537299527773\n",
       "\n",
       "[:, :, 4] =\n",
-      "  0.6861551146977027    1.0050907561249276\n",
-      " -2.1271766350833676    2.783086748817989\n",
-      "  0.36290066708826146  -0.8393741040420097\n"
+      "  1.741573096183334   -1.1215084926958787\n",
+      " -1.0633204421874831   0.2261047509926487\n",
+      "  2.1156241559162785   0.9369460650372303\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ITensor ord=3 (dim=3|id=802|\"i\") (dim=2|id=914|\"j\") (dim=4|id=185|\"k\")\n",
+       "ITensor ord=3 (dim=3|id=729|\"i\") (dim=2|id=339|\"j\") (dim=4|id=801|\"k\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -421,36 +421,36 @@
      "output_type": "stream",
      "text": [
       "(A + B) - C = ITensor ord=3\n",
-      "Dim 1: (dim=3|id=802|\"i\")\n",
-      "Dim 2: (dim=2|id=914|\"j\")\n",
-      "Dim 3: (dim=4|id=185|\"k\")\n",
+      "Dim 1: (dim=3|id=729|\"i\")\n",
+      "Dim 2: (dim=2|id=339|\"j\")\n",
+      "Dim 3: (dim=4|id=801|\"k\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 3×2×4\n",
       "[:, :, 1] =\n",
-      "  1.042372148121997   1.226389618991777\n",
-      " -0.8922771866062869  0.8491796175314339\n",
-      " -0.1944652298250768  1.9931723660836629\n",
+      " -2.347071920770196    0.8969075154944969\n",
+      "  1.3172518105747175  -0.12548422112062518\n",
+      "  0.7429843249685907  -0.47115963908234354\n",
       "\n",
       "[:, :, 2] =\n",
-      "  0.977930328879915   -0.8996218502720907\n",
-      " -0.3017655661839185   1.058133179850595\n",
-      " -1.4446178512908068  -0.3542357845616699\n",
+      "  0.41557707991675547    0.391657391536379\n",
+      " -0.007016005348685475  -1.3831183165977163\n",
+      " -0.4956922039068421     3.062994215007273\n",
       "\n",
       "[:, :, 3] =\n",
-      " -1.9868483560478982  -2.0774650100318572\n",
-      " -1.5851496305470785  -4.376988161113784\n",
-      " -1.6314268885724463  -3.575718054842421\n",
+      " -0.8135886422222385  -1.8335831226494073\n",
+      " -0.8823553091176707  -2.1732549508865797\n",
+      "  0.7933083034985963   0.41061102811813666\n",
       "\n",
       "[:, :, 4] =\n",
-      "  0.20832037732355724   0.9418999169592385\n",
-      " -3.578238800521631     3.072441023063633\n",
-      " -0.13117752711237624  -1.821225439143392\n"
+      "  2.126388162611141    0.5101494482885691\n",
+      " -2.9465927413927417   1.7088454173649317\n",
+      "  0.38173997937042814  1.704715300662326\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ITensor ord=3 (dim=3|id=802|\"i\") (dim=2|id=914|\"j\") (dim=4|id=185|\"k\")\n",
+       "ITensor ord=3 (dim=3|id=729|\"i\") (dim=2|id=339|\"j\") (dim=4|id=801|\"k\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,36 +493,36 @@
      "output_type": "stream",
      "text": [
       "A = ITensor ord=3\n",
-      "Dim 1: (dim=3|id=802|\"i\")\n",
-      "Dim 2: (dim=2|id=914|\"j\")\n",
-      "Dim 3: (dim=4|id=185|\"k\")\n",
+      "Dim 1: (dim=3|id=729|\"i\")\n",
+      "Dim 2: (dim=2|id=339|\"j\")\n",
+      "Dim 3: (dim=4|id=801|\"k\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 3×2×4\n",
       "[:, :, 1] =\n",
-      "  0.26561068436921903  -0.26547975428499887\n",
-      " -0.4782875934395217    0.4769444199454562\n",
-      " -0.4178101034017461    0.18744321763149366\n",
+      " -1.0240343320252685   1.4427889131734941\n",
+      "  0.9784151343451398  -0.44318494415067744\n",
+      "  0.6966991357119754   0.3917341881136057\n",
       "\n",
       "[:, :, 2] =\n",
-      " 0.32240827116451515  -1.5107867105985056\n",
-      " 0.10273918231134326   0.5519340670691808\n",
-      " 0.3390201169678964    0.6537436998851457\n",
+      " -0.672498508759746    -1.919867924676679\n",
+      " -0.10219402276676762  -0.7277255191372074\n",
+      "  1.0259265930689767   -0.9742510337653318\n",
       "\n",
       "[:, :, 3] =\n",
-      " -0.9531065583979812   -1.580585292796355\n",
-      " -0.41937316884154313  -0.3930358202020519\n",
-      " -0.5914986999387768   -1.787979419709314\n",
+      " -0.8448862683432987  -0.2077500163733351\n",
+      "  0.2753874216681483  -1.3714821624656794\n",
+      " -0.6298405064596754   0.6968416464895152\n",
       "\n",
       "[:, :, 4] =\n",
-      "  0.7297365122826407    0.5842122767892328\n",
-      " -1.1994176251562954   -0.18537895352775074\n",
-      " -0.19030326638031908   0.48513334474036296\n"
+      "  1.5475976443153299   -0.6199916641336296\n",
+      " -0.5950991319501007    0.7012066296272333\n",
+      " -0.22709455847843624  -0.096397848377457\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ITensor ord=3 (dim=3|id=802|\"i\") (dim=2|id=914|\"j\") (dim=4|id=185|\"k\")\n",
+       "ITensor ord=3 (dim=3|id=729|\"i\") (dim=2|id=339|\"j\") (dim=4|id=801|\"k\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -536,13 +536,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ITensor ord=1 (dim=2|id=914|\"j\")\n",
+       "ITensor ord=1 (dim=2|id=339|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -564,17 +564,17 @@
      "output_type": "stream",
      "text": [
       "trA = ITensor ord=1\n",
-      "Dim 1: (dim=2|id=914|\"j\")\n",
+      "Dim 1: (dim=2|id=339|\"j\")\n",
       "NDTensors.Dense{Float64,Array{Float64,1}}\n",
       " 2-element\n",
-      " -0.2231488332582145\n",
-      " -1.501525106925132\n"
+      " -1.7560688612517117\n",
+      "  1.4119050405258018\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ITensor ord=1 (dim=2|id=914|\"j\")\n",
+       "ITensor ord=1 (dim=2|id=339|\"j\")\n",
        "NDTensors.Dense{Float64,Array{Float64,1}}"
       ]
      },
@@ -590,25 +590,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Factoring: Singular Value Decomposition"
+    "### Factoring: Singular Value Decomposition & QR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(U * S * V - A) = 6.183017822721088e-16\n"
+      "norm(U * S * V - A) = 1.1491780379324727e-15\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "6.183017822721088e-16"
+       "1.1491780379324727e-15"
       ]
      },
      "metadata": {},
@@ -619,6 +619,34 @@
     "U,S,V = svd(A,(i,k))\n",
     "\n",
     "@show norm(U*S*V-A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norm(Q * R - A) = 8.433539757789763e-16\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8.433539757789763e-16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Q,R = qr(A, (i,k);positive=true)\n",
+    "\n",
+    "@show norm(Q*R - A)"
    ]
   }
  ],
